--- a/style.css
+++ b/style.css
@@ -9,6 +9,16 @@
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+  --gradient: linear-gradient(
+    45deg,
+    #845ec2,
+    #d65db1,
+    #ff6f91,
+    #ff9671,
+    #ffc75f,
+    #f9f871
+  );
 }
 
 body {
@@ -44,7 +54,8 @@ body {
   /* font-weight: 200; */
   /* font-weight: 500; */
   border: none;
-  background: rgb(31, 133, 128);
+  /* background: rgb(31, 133, 128); */
+  background-image: var(--gradient);
   color: rgb(236, 236, 236);
   font-size: 0.9rem;
   padding: 0.8rem 1.7rem;
@@ -52,4 +63,18 @@ body {
   letter-spacing: 0.1em;
   text-transform: uppercase;
   border-radius: 4px;
+
+  /* remember that background images are one of the few properties that can't be transformed directly */
+
+  /* setting the size like this means that it overflows the container, but we don't see the spillover because it is a background */
+  background-size: 300%;
+  background-position: left;
+
+  transition: background-position 2s ease-in-out;
+}
+
+.fun:hover,
+.fun:focus {
+  background-position: right;
+  /* background-image: linear-gradient(red, blue); */
 }
