--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
   --gradient: linear-gradient(
-    45deg,
+    90deg,
     #845ec2,
     #d65db1,
     #ff6f91,
@@ -25,7 +25,10 @@ body {
   height: 100vh;
   display: grid;
   place-items: center;
-  background-color: rgb(218, 218, 236);
+  /* background-color: rgb(218, 218, 236); */
+  background-image: var(--gradient);
+  background-size: 400%;
+  animation: bodyGradient 15s infinite alternate ease-in-out;
 }
 
 .content {
@@ -63,6 +66,7 @@ body {
   letter-spacing: 0.1em;
   text-transform: uppercase;
   border-radius: 4px;
+  cursor: pointer;
 
   /* remember that background images are one of the few properties that can't be transformed directly */
 
@@ -77,4 +81,15 @@ body {
 .fun:focus {
   background-position: right;
   /* background-image: linear-gradient(red, blue); */
+}
+
+/* KEYFRAME ANIMATIONS */
+@keyframes bodyGradient {
+  0% {
+    background-position: 0%;
+  }
+
+  100% {
+    background-position: 100%;
+  }
 }
