--- a/style.css
+++ b/style.css
@@ -56,26 +56,29 @@ audio {
   box-shadow: 0px 0px 4em rgba(0, 0, 0, 0.6);
   border-radius: 4px;
   padding-top: 2rem;
-  padding-bottom: 4rem;
+  /* padding-left: 1.5rem; */
+  /* padding-right: 1rem; */
+  padding-bottom: 3rem;
 
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
+  max-width: 500px;
 
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
 .now-playing .now-playing-art {
   /* margin-bottom: 1.2em; */
+  width: 50%;
 }
 
 .now-playing .album-art {
   height: 120px;
   width: auto;
   object-fit: contain;
-  border-radius: 3px;
-  margin: 1em auto;
 }
 
 .now-playing .now-playing-info {
